# OKLCH_CSS_Palette_Builder

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: blank.yml  codeql.yml  python-package.yml
samples/: OKLCH_palette_sample_small.css
src/: __init__.py  make_oklch_css_palette.py
src/data/: gamut_data.txt
src/modules/: __init__.py  _data_loader.py  _gamutmaxchroma.py  data_loader.py  gamutmaxchroma.py  oklchcsspalette.py
tests/test_modules/: __init__.py  test_data_loader.py  test_gamutmaxchroma.py  test_oklchcsspalette.py
