[tool.poetry]
name = "oklchcsspalette"
version = "1.1.1"
description = "OKLCH color palette builder written in Python."
authors = ["CHRIBUR_ <chribur0309@gmail.com>"]
license = "MIT"
homepage = "https://github.com/CHRIBUR0309"
repository = "https://github.com/CHRIBUR0309/OKLCH_CSS_Palette_Builder"
readme = "README.md"
packages = [
    {include = "src"}
]
exclude = [
    "src/modules/__pycache__"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.5.1"
isort = "^5.12.0"
pyproject-flake8 = "^6.1.0"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.flake8]
ignore = "W503"
extended-ignore = "E203"
max-line-length = 88
